--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "medical-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/src/server.js",
   "scripts": {
     "test": "jest --watchAll --verbose",
-    "start": "nodemon index.ts"
+    "start": "nodemon --exec ts-node src/infrastructure/servers/express/config.ts"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +19,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
